[FIX] purchase_indonesia : GRN approval update tender status, fixing search
#697 GRN: Should Not Be Able To Change Status Tender To Done Before All Product Received

--- a/purchase_indonesia/views/inherit_purchase_order.xml
+++ b/purchase_indonesia/views/inherit_purchase_order.xml
@@ -158,6 +158,7 @@
             <field name="model">purchase.order</field>
             <field name="arch" type="xml">
                 <search string="Search Purchase Order">
+                    <field name="source_purchase_request" string="Purchase Request"/>
                     <field name="name" string="Reference"/>
                     <field name="partner_id" operator="child_of"/>
                     <field name="product_id"/>
