--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -250,7 +250,7 @@
                 <search string="Search Call for Tenders">
                     <!--  field name="name" string="Call for Tenders"/-->
                     <!--  field name="exclusive" /-->
-                    <field name="request_id" string="No PP"/>
+                    <field name="request_id" string="Purchase Request"/>
                     <filter string="Active PP" domain="[('request_id.active','=',True)]" help="Active PP"/>
                     <filter string="New" domain="[('state','=','draft')]" help="New Call for Tenders"/>
                     <filter string="Confirmed" domain="[('state','=','in_progress')]" help="Call for Tenders in negotiation"/>
