[FIX] purchase_indonesia : GRN approval update tender status, fixing search
#697 GRN: Should Not Be Able To Change Status Tender To Done Before All Product Received

--- a/purchase_indonesia/views/quotation_comparison.xml
+++ b/purchase_indonesia/views/quotation_comparison.xml
@@ -679,6 +679,7 @@
             <field name="model">quotation.comparison.form</field>
             <field name="arch" type="xml">
                 <search string="Search Quotation Comparison Form">
+                    <field name="complete_name" string="Quotation Comparison Form"/>
                     <field name="origin" string="Purchase Request"/>
                     <separator/>
                     <field name="state"/>
