--- a/hr_fingerprint_report/report/fingerprint_report_templates.xml
+++ b/hr_fingerprint_report/report/fingerprint_report_templates.xml
@@ -4,7 +4,6 @@
         <template id="report_fingerprint">
             <t t-call="report.html_container">
                 <!--global variable-->
-                <t t-set="office_level" t-value="data['form']['office_level_id'][1]"/>
                 <t t-set="avg_day_work" t-value="0"/>
                 <t t-set="avg_day_work_divide" t-value="0"/>
                 
@@ -63,7 +62,10 @@
 
                     </style>
 
-                    <h2 class="text-center">Laporan Presensi <t t-esc="office_level"/></h2>
+                    <h2 class="text-center">
+                        Laporan Presensi
+                        <t t-if="data['form']['office_level_id']"><t t-esc="str(data['form']['office_level_id'][1])"/></t>
+                    </h2>
                     <!--header-->
                     <table class="table table-condensed table-borderless" style="font-size:65%;padding:0px;">
                         <tr>
@@ -92,7 +94,9 @@
                                     </tr>
                                     <tr>
                                         <td><strong>Jenis Kantor</strong></td>
-                                        <td><t t-if="data['form']['office_level_id']"><t t-esc="str(data['form']['office_level_id'][1])"/></t></td>
+                                        <td>
+                                            <t t-if="data['form']['office_level_id']"><t t-esc="str(data['form']['office_level_id'][1])"/></t>
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td><strong>Status Karyawan</strong></td>
@@ -201,14 +205,18 @@
                                 <th class="text-right" rowspan="2">Normal Hari Kerja</th>
                                 <th class="text-center" colspan="6">Pengecualian</th>
                                 <th class="text-right" rowspan="2">Riil Hari Kerja</th>
-                                <t t-if="office_level != 'HO'">
-                                    <th class="text-right" rowspan="2">Premi HK2</th>
+                                <t t-if="data['form']['office_level_id']">
+                                    <t t-if="str(data['form']['office_level_id'][1]) != 'HO'">
+                                        <th class="text-right" rowspan="2">Premi HK2</th>
+                                    </t>
                                 </t>
                                 <th class="text-center" colspan="2">Terlambat Kary Kantor</th>
-                                <t t-if="office_level != 'HO'">
-                                    <th class="text-center" colspan="2">Terlambat Kebun</th>
-                                    <th class="text-center" colspan="2">Terlambat KHL Apel</th>
-                                    <th class="text-center" colspan="2">Terlambat KHL Kerja</th>
+                                <t t-if="data['form']['office_level_id']">
+                                    <t t-if="str(data['form']['office_level_id'][1]) != 'HO'">
+                                        <th class="text-center" colspan="2">Terlambat Kebun</th>
+                                        <th class="text-center" colspan="2">Terlambat KHL Apel</th>
+                                        <th class="text-center" colspan="2">Terlambat KHL Kerja</th>
+                                    </t>
                                 </t>
                                 <th class="text-right align-middle" rowspan="2">Pulang Cepat (Menit) All</th>
                                 <th class="text-right align-middle" rowspan="2">Pulang Cepat (X) All</th>
@@ -228,13 +236,15 @@
                                 <!--terlambat-->
                                 <th class="text-right">Menit</th>
                                 <th class="text-right">X</th>
-                                <t t-if="office_level != 'HO'">
-                                    <th class="text-right">Menit</th>
-                                    <th class="text-right">X</th>
-                                    <th class="text-right">Menit</th>
-                                    <th class="text-right">X</th>
-                                    <th class="text-right">Menit</th>
-                                    <th class="text-right">X</th>
+                                <t t-if="data['form']['office_level_id']">
+                                    <t t-if="str(data['form']['office_level_id'][1]) != 'HO'">
+                                        <th class="text-right">Menit</th>
+                                        <th class="text-right">X</th>
+                                        <th class="text-right">Menit</th>
+                                        <th class="text-right">X</th>
+                                        <th class="text-right">Menit</th>
+                                        <th class="text-right">X</th>
+                                    </t>
                                 </t>
                                 <!--/terlambat-->
                             </tr>
@@ -263,8 +273,10 @@
                                             <td class="text-right"><t t-esc="a['p_out_office']"/></td>
                                             <td class="text-right"><t t-esc="a['p_no_reason']"/></td>
                                             <td class="text-right"><t t-esc="a['p_day_finger']"/></td>
-                                            <t t-if="office_level != 'HO'">
-                                                <td class="text-right"><t t-esc="a['p_piece_rate_day']"/></td>
+                                            <t t-if="data['form']['office_level_id']">
+                                                <t t-if="str(data['form']['office_level_id'][1]) != 'HO'">
+                                                    <td class="text-right"><t t-esc="a['p_piece_rate_day']"/></td>
+                                                </t>
                                             </t>
 
                                             <!--different color based on value-->
@@ -276,15 +288,17 @@
                                             -->
                                             <td class="text-right"><span t-att-class="get_color('p_hour_late_office',a['p_hour_late_office'])"/> <t t-esc="a['p_hour_late_office']"/></td>
                                             <td class="text-right"><span t-att-class="get_color('p_late_amount_office',a['p_late_amount_office'])"/> <t t-esc="a['p_late_amount_office']"/></td>
-                                            <t t-if="office_level != 'HO'">
-                                                <td class="text-right"><span t-att-class="get_color('p_estate_late',a['p_estate_late'])"/> <t t-esc="a['p_estate_late']"/></td>
-                                                <td class="text-right"><span t-att-class="get_color('p_estate_late_amount',a['p_estate_late_amount'])"/> <t t-esc="a['p_estate_late_amount']"/></td>
+                                             <t t-if="data['form']['office_level_id']">
+                                                <t t-if="str(data['form']['office_level_id'][1]) != 'HO'">
+                                                    <td class="text-right"><span t-att-class="get_color('p_estate_late',a['p_estate_late'])"/> <t t-esc="a['p_estate_late']"/></td>
+                                                    <td class="text-right"><span t-att-class="get_color('p_estate_late_amount',a['p_estate_late_amount'])"/> <t t-esc="a['p_estate_late_amount']"/></td>
 
-                                                <!--same color if value > 0-->
-                                                <td class="text-right"><t t-if="a['p_labor_late_circle'] >= 1"><span class="fa fa-circle-goldenrod"/></t> <t t-esc="a['p_labor_late_circle']"/></td>
-                                                <td class="text-right"><t t-if="a['p_labor_late_circle_amount'] >= 1"><span class="fa fa-circle-goldenrod"/></t> <t t-esc="a['p_labor_late_circle_amount']"/></td>
-                                                <td class="text-right"><t t-if="a['p_labor_late'] >= 1"><span class="fa fa-circle-goldenrod"/></t> <t t-esc="a['p_labor_late']"/></td>
-                                                <td class="text-right"><t t-if="a['p_labor_late_amount'] >= 1"><span class="fa fa-circle-goldenrod"/></t> <t t-esc="a['p_labor_late_amount']"/></td>
+                                                    <!--same color if value > 0-->
+                                                    <td class="text-right"><t t-if="a['p_labor_late_circle'] >= 1"><span class="fa fa-circle-goldenrod"/></t> <t t-esc="a['p_labor_late_circle']"/></td>
+                                                    <td class="text-right"><t t-if="a['p_labor_late_circle_amount'] >= 1"><span class="fa fa-circle-goldenrod"/></t> <t t-esc="a['p_labor_late_circle_amount']"/></td>
+                                                    <td class="text-right"><t t-if="a['p_labor_late'] >= 1"><span class="fa fa-circle-goldenrod"/></t> <t t-esc="a['p_labor_late']"/></td>
+                                                    <td class="text-right"><t t-if="a['p_labor_late_amount'] >= 1"><span class="fa fa-circle-goldenrod"/></t> <t t-esc="a['p_labor_late_amount']"/></td>
+                                                </t>
                                             </t>
                                             <td class="text-right"><t t-esc="a['p_hour_early_leave']"/></td>
                                             <td class="text-right"><t t-esc="a['p_early_leave_amount']"/></td>
@@ -361,18 +375,22 @@
                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_out_office)"/></strong></td>
                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_no_reason)"/></strong></td>
                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_day_finger)"/></strong></td>
-                                <t t-if="office_level != 'HO'">
-                                    <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_piece_rate_day)"/></strong></td>
+                                <t t-if="data['form']['office_level_id']">
+                                    <t t-if="str(data['form']['office_level_id'][1]) != 'HO'">
+                                        <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_piece_rate_day)"/></strong></td>
+                                    </t>
                                 </t>
                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_hour_late_office)"/></strong></td>
                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_late_amount_office)"/></strong></td>
-                                <t t-if="office_level != 'HO'">
-                                    <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_estate_late)"/></strong></td>
-                                    <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_estate_late_amount)"/></strong></td>
-                                    <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_labor_late_circle)"/></strong></td>
-                                    <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_labor_late_circle_amount)"/></strong></td>
-                                    <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_labor_late)"/></strong></td>
-                                    <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_labor_late_amount)"/></strong></td>
+                                <t t-if="data['form']['office_level_id']">
+                                    <t t-if="str(data['form']['office_level_id'][1]) != 'HO'">
+                                        <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_estate_late)"/></strong></td>
+                                        <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_estate_late_amount)"/></strong></td>
+                                        <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_labor_late_circle)"/></strong></td>
+                                        <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_labor_late_circle_amount)"/></strong></td>
+                                        <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_labor_late)"/></strong></td>
+                                        <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_labor_late_amount)"/></strong></td>
+                                    </t>
                                 </t>
                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_hour_early_leave)"/></strong></td>
                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(p_early_leave_amount)"/></strong></td>
@@ -517,22 +535,24 @@
                                         <td class="text-right"><t t-esc="sum_late_amount_office"/> kali</td>
                                         <td class="text-right"><t t-esc="sum_late_amount_office_person"/> orang</td>
                                     </tr>
-                                    <t t-if="office_level != 'HO'">
-                                        <tr>
-                                            <td>Kebun</td>
-                                            <td class="text-right"><t t-esc="sum_estate_late_amount"/> kali</td>
-                                            <td class="text-right"><t t-esc="sum_estate_late_amount_person"/> orang</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Apel Pagi</td>
-                                            <td class="text-right"><t t-esc="sum_labor_late_circle_amount"/> kali</td>
-                                            <td class="text-right"><t t-esc="sum_labor_late_circle_amount_person"/> orang</td>
-                                        </tr>
-                                        <tr>
-                                            <td>KHL Kerja</td>
-                                            <td class="text-right"><t t-esc="sum_labor_late_amount"/> kali</td>
-                                            <td class="text-right"><t t-esc="sum_labor_late_amount_person"/> orang</td>
-                                        </tr>
+                                    <t t-if="data['form']['office_level_id']">
+                                        <t t-if="str(data['form']['office_level_id'][1]) != 'HO'">
+                                            <tr>
+                                                <td>Kebun</td>
+                                                <td class="text-right"><t t-esc="sum_estate_late_amount"/> kali</td>
+                                                <td class="text-right"><t t-esc="sum_estate_late_amount_person"/> orang</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Apel Pagi</td>
+                                                <td class="text-right"><t t-esc="sum_labor_late_circle_amount"/> kali</td>
+                                                <td class="text-right"><t t-esc="sum_labor_late_circle_amount_person"/> orang</td>
+                                            </tr>
+                                            <tr>
+                                                <td>KHL Kerja</td>
+                                                <td class="text-right"><t t-esc="sum_labor_late_amount"/> kali</td>
+                                                <td class="text-right"><t t-esc="sum_labor_late_amount_person"/> orang</td>
+                                            </tr>
+                                        </t>
                                     </t>
                                     <tr>
                                         <td>Pulang Cepat</td>
